[tool.poetry]
name = "rinha-backend-q1"
version = "0.1.0"
description = ""
authors = ["eduwxyz <eduardoshy1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
uvicorn = "^0.27.0.post1"
sqlalchemy = "^2.0.25"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
